--- a/assets/css/common/curtis-style.css
+++ b/assets/css/common/curtis-style.css
@@ -116,7 +116,7 @@ label.fcf-label {
 }
 
 .fcf-credit a:hover {
-    color: #0056b3;
+    color: #671ed5;
     text-decoration: underline;
 }
 
@@ -158,14 +158,14 @@ label.fcf-label {
 
 .fcf-btn-primary {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #8c00ff;
+    border-color: #8c00ff;
 }
 
 .fcf-btn-primary:hover {
     color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc;
+    background-color: #7a03db;
+    border-color: #7a03db;
 }
 
 .fcf-btn-primary:focus, .fcf-btn-primary.focus {
