--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -39,7 +39,7 @@
 </script>
 {{- end }}
 
-<script src="https://cdn.usefathom.com/script.js" data-site="LXPOOQBI" defer></script>
+<script src="https://cdn.usefathom.com/script.js" data-site="PHMGLFBG" defer></script>
 
 <header class="header">
     <nav class="nav">
